fix z-index in viewDrinks

--- a/styles/viewDrinks/viewDrinks.css
+++ b/styles/viewDrinks/viewDrinks.css
@@ -114,7 +114,7 @@
     border-radius: 10px;
     border: 3px solid var(--color1);
 
-    z-index: 2;
+    z-index: 400;
 
 }
 
@@ -123,7 +123,7 @@
     height: 21vh;
     margin-bottom: 4vh;
 
-    z-index: 2;
+    z-index: 400;
 }
 
 .cervezas {
